tests/snapshots/snapshots__budget_log_src_1000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 1000 (952 words)

__private_api.rs
     3→use self::sealed::KVs;
     4→use crate::{logger, Level, Log, Metadata, Record};
     7→pub use std::{format_args, module_path, stringify};
     9→#[cfg(not(feature = "kv"))]
    10→pub type Value<'a> = &'a str;
    12→mod sealed {
    14→    pub trait KVs<'a> {
    39→pub struct GlobalLogger;
   112→#[cfg(feature = "kv")]
   113→mod kv_support {
   114→    use crate::kv;
   116→    pub type Value<'a> = kv::Value<'a>;
   151→pub use self::kv_support::*;
kv/error.rs
     3→/// An error encountered while working with structured data.
     4→#[derive(Debug)]
     5→pub struct Error {
     6→    inner: Inner,
     7→}
     9→#[derive(Debug)]
    10→enum Inner {
    11→    #[cfg(feature = "std")]
    12→    Boxed(std_support::BoxedError),
    13→    Msg(&'static str),
    14→    #[cfg(feature = "value-bag")]
    15→    Value(crate::kv::value::inner::Error),
    16→    Fmt,
    17→}
    29→    pub(super) fn from_value(err: crate::kv::value::inner::Error) -> Self {
    37→    pub(super) fn into_value(self) -> crate::kv::value::inner::Error {
    69→mod std_support {
    70→    use super::*;
    73→    pub(super) type BoxedError = Box<dyn error::Error + Send + Sync>;
kv/key.rs
     3→use std::borrow::Borrow;
     6→/// A type that can be converted into a [`Key`](struct.Key.html).
     7→pub trait ToKey {
    36→#[derive(Clone, Debug, PartialEq, Eq, PartialOrd, Ord, Hash)]
    37→pub struct Key<'k> {
    38→    // NOTE: This may become `Cow<'k, str>`
    39→    key: &'k str,
    40→}
    94→mod std_support {
    95→    use super::*;
   113→mod sval_support {
   114→    use super::*;
   136→mod serde_support {
   137→    use super::*;
kv/mod.rs
   246→mod error;
   247→mod key;
   250→mod source;
   252→mod value;
   254→pub use self::error::Error;
   255→pub use self::key::{Key, ToKey};
   256→pub use self::source::{Source, VisitSource};
   257→pub use self::value::{ToValue, Value, VisitValue};
   259→#[cfg(feature = "kv_unstable")]
   260→pub mod source;
   261→#[cfg(feature = "kv_unstable")]
   262→pub mod value;
   265→pub use self::source::Visitor;
kv/source.rs
     6→use crate::kv::{Error, Key, ToKey, ToValue, Value};
     9→/// A source of key-values.
    10→///
      →…
    51→pub trait Source {
    91→fn get_default<'v>(source: &'v (impl Source + ?Sized), key: Key) -> Option<Value<'v>> {
   114→fn count_default(source: impl Source) -> usize {
   234→/// A visitor for the key-value pairs in a [`Source`](trait.Source.html).
   235→pub trait VisitSource<'kvs> {
   240→#[allow(clippy::needless_lifetimes)] // Not needless.
   241→impl<'a, 'kvs, T> VisitSource<'kvs> for &'a mut T
   242→where
   243→    T: VisitSource<'kvs> + ?Sized,
   244→{
   280→mod std_support {
   281→    use super::*;
   462→pub use VisitSource as Visitor;
kv/value.rs
     6→use std::fmt;
     8→pub use crate::kv::Error;
    10→/// A type that can be converted into a [`Value`](struct.Value.html).
    11→pub trait ToValue {
    33→/// A value in a key-value.
    34→///
      →…
   119→pub struct Value<'v> {
   120→    inner: inner::Inner<'v>,
   121→}
   204→    fn from_inner<T>(value: T) -> Self
   205→    where
   206→        T: Into<inner::Inner<'v>>,
   207→    {
   234→#[cfg(feature = "kv_serde")]
   235→impl<'v> serde_core::Serialize for Value<'v> {
   244→#[cfg(feature = "kv_sval")]
   245→impl<'v> sval::Value for Value<'v> {
   251→#[cfg(feature = "kv_sval")]
   252→impl<'v> sval_ref::ValueRef<'v> for Value<'v> {
   288→macro_rules! impl_to_value_primitive {
   312→macro_rules! impl_to_value_nonzero_primitive {
   336→macro_rules! impl_value_to_primitive {
   390→mod std_support {
   395→    use super::*;
   450→/// A visitor for a [`Value`].
   451→///
      →…
   462→pub trait VisitValue<'v> {
   538→#[allow(clippy::needless_lifetimes)] // Not needless.
   539→impl<'a, 'v, T: ?Sized> VisitValue<'v> for &'a mut T
   540→where
   541→    T: VisitValue<'v>,
   542→{
   602→pub(in crate::kv) mod inner {
   610→    use super::*;
   612→    pub use value_bag::ValueBag as Inner;
   614→    pub use value_bag::Error;
   721→pub(in crate::kv) mod inner {
   735→    use super::*;
   737→    #[derive(Clone)]
   738→    pub enum Inner<'v> {
   739→        None,
   740→        Bool(bool),
   741→        Str(&'v str),
   742→        Char(char),
   743→        I64(i64),
   744→        U64(u64),
   745→        F64(f64),
   746→        I128(i128),
   747→        U128(u128),
   748→        Debug(&'v dyn fmt::Debug),
   749→        Display(&'v dyn fmt::Display),
   750→    }
  1123→pub use VisitValue as Visit;
  1129→macro_rules! as_debug {
  1139→macro_rules! as_display {
  1149→macro_rules! as_error {
  1159→macro_rules! as_serde {
  1169→macro_rules! as_sval {
lib.rs
   401→use std::error;
   405→#[macro_use]
   406→mod macros;
   407→mod serde;
   409→#[cfg(feature = "kv")]
   410→pub mod kv;
   413→use std::sync::atomic::{AtomicUsize, Ordering};
   416→use std::cell::Cell;
   418→use std::sync::atomic::Ordering;
   420→#[cfg(not(target_has_atomic = "ptr"))]
   421→struct AtomicUsize {
   422→    v: Cell<usize>,
   423→}
   425→#[cfg(not(target_has_atomic = "ptr"))]
   426→impl AtomicUsize {
   442→#[cfg(not(target_has_atomic = "ptr"))]
   443→unsafe impl Sync for AtomicUsize {}
   475→pub enum Level {
   476→    /// The "error" level.
   477→    ///
   478→    /// Designates very serious errors.
   479→    // This way these line up with the discriminants for LevelFilter below
      →…
   516→    type Err = ParseLevelError;
   636→pub enum LevelFilter {
   637→    /// A level lower than all log levels.
   638→    Off,
   639→    /// Corresponds to the `Error` log level.
   640→    Error,
      →…
   666→    type Err = ParseLevelError;
   780→#[derive(Copy, Clone, Eq, PartialEq, Ord, PartialOrd, Hash, Debug)]
   781→enum MaybeStaticStr<'a> {
   782→    Static(&'static str),
   783→    Borrowed(&'a str),
   784→}
   787→    #[inline]
   788→    fn get(&self) -> &'a str {
   789→        match *self {
      →…
   842→pub struct Record<'a> {
   843→    metadata: Metadata<'a>,
   844→    args: fmt::Arguments<'a>,
   845→    module_path: Option<MaybeStaticStr<'a>>,
   846→    file: Option<MaybeStaticStr<'a>>,
      →…
   856→#[cfg(feature = "kv")]
   857→#[derive(Clone)]
   858→struct KeyValues<'a>(&'a dyn kv::Source);
   860→#[cfg(feature = "kv")]
   861→impl<'a> fmt::Debug for KeyValues<'a> {
  1003→pub struct RecordBuilder<'a> {
  1004→    record: Record<'a>,
  1005→}
  1158→pub struct Metadata<'a> {
  1159→    level: Level,
  1160→    target: &'a str,
  1161→}
  1200→pub struct MetadataBuilder<'a> {
  1201→    metadata: Metadata<'a>,
  1202→}
  1249→pub trait Log: Sync + Send {
  1282→/// A dummy initial value for LOGGER.
  1283→struct NopLogger;
  1310→#[cfg(feature = "std")]
  1311→impl<T> Log for std::boxed::Box<T>
  1312→where
  1313→    T: ?Sized + Log,
  1314→{
  1327→#[cfg(feature = "std")]
  1328→impl<T> Log for std::sync::Arc<T>
  1329→where
  1330→    T: ?Sized + Log,
  1331→{
  1482→#[cfg(target_has_atomic = "ptr")]
  1483→fn set_logger_inner<F>(make_logger: F) -> Result<(), SetLoggerError>
  1484→where
  1485→    F: FnOnce() -> &'static dyn Log,
  1486→{
  1487→    match STATE.compare_exchange(
      →…
  1549→pub struct SetLoggerError(());
  1558→#[cfg(feature = "std")]
  1559→impl error::Error for SetLoggerError {}
  1566→pub struct ParseLevelError(());
  1575→#[cfg(feature = "std")]
  1576→impl error::Error for ParseLevelError {}
  1599→#[doc(hidden)]
  1600→pub mod __private_api;
  1602→/// The statically resolved maximum log level.
  1603→///
  1604→/// See the crate level documentation for information on how to configure this.
  1605→///
  1606→/// This value is checked by the log macros, but not by the `Log`ger returned by
  1607→/// the [`logger`] function. Code that manually calls functions on that value
  1608→/// should compare the level against this value.
  1609→///
  1610→/// [`logger`]: fn.logger.html
  1611→pub const STATIC_MAX_LEVEL: LevelFilter = match cfg!(debug_assertions) {
macros.rs
    75→macro_rules! log {
   119→macro_rules! __log {
   165→macro_rules! error {
   204→macro_rules! warn {
   252→macro_rules! info {
   292→macro_rules! debug {
   336→macro_rules! trace {
   391→macro_rules! log_enabled {
   415→macro_rules! __log_enabled {
   429→macro_rules! __log_logger {
   445→macro_rules! __log_key {
   459→macro_rules! __log_key {
   468→macro_rules! __log_value {
   517→macro_rules! __log_value {
   526→macro_rules! __log_value_sval {
   535→macro_rules! __log_value_sval {
   544→macro_rules! __log_value_serde {
   553→macro_rules! __log_value_serde {
   564→macro_rules! __log_value_error {
   573→macro_rules! __log_value_error {
serde.rs
     3→use serde_core::de::{
     4→    Deserialize, DeserializeSeed, Deserializer, EnumAccess, Error, Unexpected, VariantAccess,
     5→    Visitor,
     6→};
     9→use crate::{Level, LevelFilter, LOG_LEVEL_NAMES};
